<resources>
    <string name="app_name">Privacy Fitness</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="health_monitor">Health Monitor</string>
    <string name="step_count">Steps: 0</string>
    <string name="calories">Calories: 0</string>
    <string name="gps_not_available">GPS: Not Available</string>
    <string name="altitude_not_available">Altitude: Not Available</string>
    <string name="start">Start</string>
    <string name="heart_rate">Heart Rate: 0</string>
    <string name="stop">Stop</string>
    <string name="monitoraggio_giornaliero_attivo">Monitoraggio Giornaliero Attivo</string>
    <string name="show_user_id">Show User ID</string>
</resources>