<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/inner_frame_layout_padding">

            <TextView
                android:id="@+id/heartRateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rate"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/stepCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_count"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/caloriesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/gpsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_not_available"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/altitudeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude_not_available"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/workoutSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/start" />

            <Button
                android:id="@+id/showQRCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mostra QR Code" />

            <ImageView
                android:id="@+id/qrCodeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>